[package]
name = "pmtiles_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }

md-5 = "0.10"
sqlite = "0.26.0"
itertools = "0.10.3"
serde_json = "1.0.82"
crossbeam-channel = "0.5"
flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false }
