[package]
name = "pmtiles_tool"
version = "0.1.1"
authors = ["Keitaroh Kobayashi <k.kobayashi@geolonia.com>"]
homepage = "https://github.com/geolonia/pmtiles_tool"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }

sqlite = "0.26.0"
itertools = "0.10.3"
serde_json = "1.0.82"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
num_cpus = "1.13.1"
flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false }
memmap2 = "0.5"
lazy_static = "1.4"
regex = "1.6"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
r2d2 = "0.8"

[dependencies.sqlite3-src]
version = "0.3"
features = ["bundled"]
